cabal-version:      3.0
name:               hevicles
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Berthels
maintainer:         john.berthels@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hevicles
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
        , sdl2
        , text
    hs-source-dirs:   app
    default-language: Haskell2010
